# FTPL

./: .gitignore  BabySkyrme.hpp  CMakeCache.txt  CMakeLists.txt  Core.hpp  FieldTheories.hpp  Makefile  README.md  Types.cpp  Types.hpp  cmake_install.cmake  main.cpp
source/: BabySkyrme.hpp  BabySkyrme.hpp.gch  CompactVorticies.hpp  CompactVorticieswMetric.hpp  Derivatives.hpp  Exceptions.hpp  ExtendedHopfions.hpp  FieldTheories.hpp  IntensityTransformations.hpp  Monopoles.hpp  Monopoles2.hpp  PointParticleApproximation.hpp  RationalMaps.hpp  SakaiSugimoto.hpp  Skyrme.hpp  SkyrmeWithMeson.hpp  Vorticies.hpp  a.out  main.cpp
source_CUDA/: gpuSolvers.hpp
source_openCL/: OpenCLBase.hpp
source_plot/: plots.cpp  plots.hpp
